--- a/style.css
+++ b/style.css
@@ -77,7 +77,21 @@ body {
 
 .quote {
   background-color: #E5E7EB;
-  padding: 30px 200px;
+  padding: 100px 200px;
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 300;
+  color: 	hsl(220, 13%, 50%);
+  display: flex;
+  flex-direction: column;
+}
+
+.quote .secondary-text {
+  align-self: flex-end;
+  font-size: 18px;
+  font-weight: 600;
+  font-style: normal;
+  color: 	hsl(220, 13%, 25%);
 }
 
 .cta {
