--- a/style.css
+++ b/style.css
@@ -96,10 +96,30 @@ body {
 
 .cta {
   background-color: white;
+  padding: 50px 200px;
 }
 
-.footer {
-  background-color: #1F2937;
+.cta .container{
+  border-radius: 10px;
+  background: #3882F6;
+  padding: 20px 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 100px;
+}
+
+.cta h2 {
+  font-size: 20px;
+  font-weight: 500;
+  color: #F9FAF8;
+  margin: 0;
+}
+
+.cta p {
+  font-size: 18px;
+  color: 	hsl(220, 13%, 75%);
+  margin: 0;
 }
 
 
@@ -107,14 +127,25 @@ button {
   background-color: #3882F6;
   border: none;
   color: white;
-  padding: 10px 30px;
+  padding: 5px 30px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 18px;
   margin: 4px 2px;
   cursor: pointer;
-  border-radius: 12px;
+  border-radius: 8px;
+}
+
+.cta button {
+  border: 2px solid white;
+}
+
+.footer {
+  background-color: #1F2937;
+  padding: 50px;
+  text-align: center;
+  color: #F9FAF8;
 }
 
 
